feat: comandas por área para pedidos de cliente y cocina avanza su estado (A-08)